# FractalApp

./: .gitignore  CMakeLists.txt  README.md  linux.makefile  makefile  msw.makefile
.github/workflows/: compile.yml  msw-msvc.yml  msw.yml  ubuntu-gnu.yml  win-mingw.yml  win-mingw32-wx32.yml  win-mingw32-wx64.yml  win-mingw32.yml  win-mingw64-wx32.yml  win-mingw64-wx64.yml  win-mingw64.yml  win-msvc.yml  windows-mingw.yml  windows-msvc.yml
examples/: CMakeLists.txt  FractalApp.cpp
include/: CURSOR_CROSS.h  FractalBitmap.h  FractalFrame.h  FractalPanel.h  HDPrintscreenDialog.h  InfoPanel.h  myConversions.h
src/: CMakeLists.txt  CURSOR_CROSS.cpp  FractalBitmap.cpp  FractalFrame.cpp  FractalPanel.cpp  HDPrintscreenDialog.cpp  InfoPanel.cpp
